# streetwarp-cli

./: .gitignore  Cargo.toml  README.md
path_optimizer/: Dockerfile  README.md  main.py  package.sh
res/: Lunch_Miler.gpx  Mercer_Lap_Bike_ride.gpx  green_valley_rd.gpx  round_the_sound_day1.gpx  round_the_sound_day2.gpx  straight_test.gpx  twisty_test.gpx
src/: ffmpeg.rs  main.rs  optim.rs  options.rs  progress.rs
