[package]
name = "streetwarp"
version = "0.1.0"
authors = ["Peter Elmers <peter.elmers@yahoo.com>"]
edition = "2018"

[dependencies]
gpx = "^0.8"
geo = "^0.14"
structopt = "0.3.16"
tokio = { version ="0.2.22", features =["full"] }
reqwest = "0.10.7"
futures = "0.3.5"
rayon = "1.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde = "1.0.115"
ordered-float = "2.0.0"
img_hash = "3.1.0"
image = "0.23.11"
palette = "0.5.0"
